--- a/bookmarkApp/src/app/app.component.html
+++ b/bookmarkApp/src/app/app.component.html
@@ -33,29 +33,6 @@
          </div>
       </div>
       <div class="col-sm">
-         <h4>Categories</h4>
-         <div class="input-group input-group-sm mb-3">
-            <div class="input-group-prepend">
-               <span class="input-group-text" id="inputGroup-sizing-sm"><i class="fa fa-plus" aria-hidden="true"></i></span>
-            </div>
-            <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
-         </div>
-         <ul class="list-group">
-            <li class="list-group-item justify-content-between">
-               Cras justo odio
-               <span class="badge badge-default badge-pill">14</span>
-            </li>
-            <li class="list-group-item justify-content-between">
-               Dapibus ac facilisis in
-               <span class="badge badge-default badge-pill">2</span>
-            </li>
-            <li class="list-group-item justify-content-between">
-               Morbi leo risus
-               <span class="badge badge-default badge-pill">1</span>
-            </li>
-         </ul>
-      </div>
-      <div class="col-sm">
          <h4>Tags</h4>
          <div class="input-group input-group-sm mb-3">
             <div class="input-group-prepend">
@@ -65,18 +42,23 @@
          </div>
          <ul class="list-group">
             <li class="list-group-item justify-content-between">
-               Cras justo odio
+               Codepen
                <span class="badge badge-default badge-pill">14</span>
             </li>
             <li class="list-group-item justify-content-between">
-               Dapibus ac facilisis in
+               Tympanus
                <span class="badge badge-default badge-pill">2</span>
             </li>
             <li class="list-group-item justify-content-between">
-               Morbi leo risus
+              Code My UI
                <span class="badge badge-default badge-pill">1</span>
             </li>
          </ul>
       </div>
+      <div class="col-sm">
+
+      </div>
    </div>
 </div>
+
+<app-bookmark></app-bookmark>
