--- a/bookmarkApp/src/app/app.component.html
+++ b/bookmarkApp/src/app/app.component.html
@@ -24,41 +24,13 @@
 <div class="container">
    <div class="row">
       <div class="col-sm">
-         <h4>Add Bookmark</h4>
-         <div class="input-group input-group-sm mb-3">
-            <div class="input-group-prepend">
-               <span class="input-group-text" id="inputGroup-sizing-sm"><i class="fa fa-plus" aria-hidden="true"></i></span>
-            </div>
-            <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
-         </div>
+        <app-bookmark></app-bookmark>
       </div>
       <div class="col-sm">
-         <h4>Tags</h4>
-         <div class="input-group input-group-sm mb-3">
-            <div class="input-group-prepend">
-               <span class="input-group-text" id="inputGroup-sizing-sm"><i class="fa fa-plus" aria-hidden="true"></i></span>
-            </div>
-            <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
-         </div>
-         <ul class="list-group">
-            <li class="list-group-item justify-content-between">
-               Codepen
-               <span class="badge badge-default badge-pill">14</span>
-            </li>
-            <li class="list-group-item justify-content-between">
-               Tympanus
-               <span class="badge badge-default badge-pill">2</span>
-            </li>
-            <li class="list-group-item justify-content-between">
-              Code My UI
-               <span class="badge badge-default badge-pill">1</span>
-            </li>
-         </ul>
+              <app-tag></app-tag>
       </div>
       <div class="col-sm">
 
       </div>
    </div>
 </div>
-
-<app-bookmark></app-bookmark>
