--- a/bookmarkApp/src/app/bookmark/bookmark.component.html
+++ b/bookmarkApp/src/app/bookmark/bookmark.component.html
@@ -1,4 +1,27 @@
-  <h2>{{ bookmark.descreption }} Descreptioin</h2>
+  <!-- <h2>{{ bookmark.descreption }} Descreptioin</h2>
   <div><span>id: </span>{{ bookmark.id }}</div>
   <div><span>url: </span>{{ bookmark.url }}</div>
-  <div><span>author: </span>{{ bookmark.author }}</div>
+  <div><span>author: </span>{{ bookmark.author }}</div> -->
+  <h4>Add Bookmark</h4>
+  <div class="input-group input-group-sm mb-3">
+     <div class="input-group-prepend">
+        <span class="input-group-text" id="inputGroup-sizing-sm"><i class="fa fa-plus" aria-hidden="true"></i></span>
+     </div>
+     <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+  </div>
+  <ul class="list-group" >
+     <li class="list-group-item justify-content-between bookmark-kek" *ngFor="let bookmark of bookmarks" (mouseover)="onSelect(bookmark)">
+        {{bookmark.descreption}}
+
+     </li>
+  </ul>
+  <hr>
+  <div *ngIf="selectedBookmark">
+  <h4>URL: {{ selectedBookmark.url}}</h4>
+  <div><span>id: </span>{{selectedBookmark.descreption}}</div>
+  <div>
+    <label>URL:
+      <input [(ngModel)]="selectedBookmark.url" placeholder="name">
+    </label>
+  </div>
+</div>
